--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,7 +1,8 @@
   body
     {
-        background-color: lightblue;
+      background-color: #c4c4c4;
         font-size: 1rem;
+        font-family: "Comic Sans MS", "Comic Sans";
         height: 100%;
         width: 100%;
     }
