--- a/src/components/Questions.module.css
+++ b/src/components/Questions.module.css
@@ -1,32 +1,86 @@
 .QuestionScreen{
     position: absolute;
+    margin-top: 50px;
+    display: flex;
+    gap: 10%;
     height: 80%;
     width: 100%;
-    background-color:#db8127;
-}
-
-.QuestionWrapper{
-    background-color: #FFFF;
-    height: 95%;
-    width:  95%;
+    background-color:#FFF;
 }
 
 .leftInfoBlock{
     border-left: thick solid #80C0E4;
-    border-radius: 1.5vh 0 0 0;
+    display: flex;
+    flex-direction: column;
+    border-radius: 10px 0 0 0;
+    margin-top: 25px;
+    margin-left: 25px;
     height: 90%;
-    max-width: 40%;
+    width: 30%;
+}
+
+.question{
+    text-align: center;
+    margin-left: 5px;
+}
+
+.questionsCountInfo{
+    font-size: 0.7rem;
+    display: flex;
+    flex-direction: column;
+    margin-top: auto;
+    padding-left: 5px;
+}
+
+.rightInfoBlock{
+    margin-top: 25px;
+    margin-right: 25px;
+    height: 90%;
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+}
+
+.answersWrapper
+{
+    display: flex;
+    flex-direction: column;
+    margin-top: 5%;
+}
+
+.answer
+{
+    box-shadow: 0 1px 0 0  #dce1e6, 0 0 0 1px  #e7e8ec;
+    background-color: #abdaf5;
+    margin: 10px;
+    height: 52px;
+    width: 155px;
+    border-radius: 4px;
+    font-family: "Comic Sans MS", "Comic Sans";
+    align-self: center;
+}
+
+.answer:hover{
+    background-color: #dce1e6;
+    transition:0.4s;
+}
+
+.questionControlGroup{
+    display: flex;
+    margin-top: auto;
+    margin-left: auto;
 }
 
 .header{
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 30%;
+    width: 100%;
     height: 10%; 
     background:#80C0E4;
     border-radius: 1vh;
 }
-.categoryName{
-    font-family: "Comic Sans MS", "Comic Sans";
-}
+
+
+
