--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,6 +1,7 @@
-  body
-    {
-      background-color: #c4c4c4;
-        font-size: 1rem;
-        font-family: "Comic Sans MS", "Comic Sans";
-    }
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap');
+
+body {
+  background-color: #c4c4c4;
+  font-size: 1rem;
+  font-family: 'Noto Sans', sans-serif;
+}
