--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,7 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap');
 
+
 body {
   background-color: #c4c4c4;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
   font-size: 1rem;
   font-family: 'Noto Sans', sans-serif;
 }
