--- a/src/components/QuestionScreen/Questions.module.css
+++ b/src/components/QuestionScreen/Questions.module.css
@@ -37,8 +37,7 @@
 {
     display: flex;
     flex-direction: column;
-    margin-top: 20px;
-    
+    margin-top: 20px;  
 }
 
 .answer
@@ -73,7 +72,7 @@
 .questionControlGroup{
     display: flex;
     margin-top: 20px;
-    justify-content: flex-end;
+    justify-content:center;
 }
 
 .questionControl{
