--- a/src/components/HomeScreen/HomeScreen.module.css
+++ b/src/components/HomeScreen/HomeScreen.module.css
@@ -20,5 +20,19 @@
     border-radius: 5px;
     text-align: center;
     box-sizing: border-box;
+    font-family: inherit;
 }
 
+.startQuizBtn{
+    box-shadow: 0 1px 0 0  #dce1e6, 0 0 0 1px  #e7e8ec;
+    background-color: #abdaf5;
+    border-radius: 4px;
+    font-family: inherit;
+    align-self: center;
+    height: 52px;
+    width: 155px;
+}
+.startQuizBtn:hover{
+    background-color: #dce1e6;
+    transition:0.4s;
+}
