Next question button style fix

--- a/src/components/QuestionScreen/Questions.module.css
+++ b/src/components/QuestionScreen/Questions.module.css
@@ -50,6 +50,10 @@
     border-width: 1px;
 }
 
+.pageButtons:disabled{
+    pointer-events: none;
+}
+
 .answers{
     margin-bottom: 10px;
     min-height: 60px;
