--- a/src/components/HomeScreen/HomeScreen.module.css
+++ b/src/components/HomeScreen/HomeScreen.module.css
@@ -30,7 +30,10 @@
     height: 52px;
     width: 155px;
 }
-.startQuizBtn:hover{
-    background-color: #dce1e6;
-    transition:0.4s;
-}
+
+@media (hover: hover) and (pointer: fine) {
+    .startQuizBtn:hover{
+        background-color: #dce1e6;
+        transition:0.4s;
+    }
+  }
